# contract-v1

./: .gitignore  README.md  hie.yaml  paradiso.cabal
.devcontainer/: devcontainer.json
app/: fixed-price-datum-json.hs  fixed-price-plutus.hs
src/: SerialiseJSON.hs
src/Paradiso/Contracts/FixedPrice/: OffChain.hs  OnChain.hs  Trace.hs  Types.hs  Utility.hs
